appId: ai.praxisshield.app
---
- scrollUntilVisible:
    element:
      id: questionnaire-submit
    direction: DOWN
    speed: 60
    timeout: 120000
    visibilityPercentage: 20
    centerElement: true
- tapOn:
    id: questionnaire-submit
- extendedWaitUntil:
    visible:
      id: wlan-screen
    timeout: 30000
